--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -78,6 +78,28 @@
   }
 }
 
+.tiptap {
+  @apply flex
+  h-[80px]
+  w-full
+  overflow-y-auto
+  rounded-md
+  border
+  border-input
+  bg-background
+  px-3
+  py-2
+  text-sm
+  ring-offset-background
+  placeholder:text-muted-foreground
+  focus-visible:outline-none
+  focus-visible:ring-2
+  focus-visible:ring-ring
+  focus-visible:ring-offset-2
+  disabled:cursor-not-allowed
+  disabled:opacity-50;
+}
+
 @media print {
   body * {
     @apply invisible;
